--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '2'
 services:
   node1:
     image: "failathon/docker-fusion:latest"
+    mem_limit: 4g
     ports:
      - "3000:3000"
      - "3001:3001"
@@ -19,6 +20,7 @@ services:
 
   node2:
     image: "failathon/docker-fusion:latest"
+    mem_limit: 3g
     depends_on:
       - node1
     volumes_from:
@@ -34,6 +36,7 @@ services:
 
   node3:
     image: "failathon/docker-fusion:latest"
+    mem_limit: 3g
     depends_on:
       - node1
     volumes_from:
